# PulseWatch

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  alertmanager.yml  docker-compose.yml  prometheus.yml  prometheus_rules.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
agent/: agent.py  config.py  logs_streamer.py  pulsewatch-agent.service  requirements.txt  sender.py
agent/collectors/: docker_collector.py  logs_collector.py  system.py
alembic/: env.py
alembic/versions/: 06fcec7eb504_create_servers_table.py  0dcd1bd7f795_create_metrics_table.py  278c8ed5c4f5_create_docker_metrics_table.py  54db233075d4_add_fivemin_to_periodtype_enum.py  550c021d358e_add_agent_version_to_servers.py  62b88e6c93af_add_owner_id_to_servers.py  646f32b63886_add_paused_to_servers.py  720d5857e2f6_add_subscription_tier_to_users.py  743050206199_add_totp_fields_to_users.py  7c818dce7bd1_create_alert_tables.py  8fee5b79888e_add_logs_table.py  95fa57d46079_add_audit_log_table.py  971107cbe3a8_add_email_alerts_enabled_to_users.py  a1b2c3d4e5f6_create_aggregate_tables.py  a79e822e0093_add_notification_channels_to_alert_rules.py  ab2eb4bc624c_add_container_name_to_alert_events.py  b3ee6f8a901f_add_resolved_at_to_alert_events.py  bcd650cf69c9_cascade_delete_metrics_and_docker_.py  d0d1001ee097_add_telegram_chat_id_to_users.py  d432b550632e_create_users_table.py  ffd0de8ef6dc_tech_debt_tz_aware_timestamps_server_.py
app/: config.py  database.py  main.py  redis_client.py  telegram_bot.py
app/api/: alertmanager.py  alerts.py  audit.py  auth.py  deps.py  docker_metrics.py  metrics.py  servers.py  websocket.py  ws_metrics.py
app/core/: connection_manager.py  observability.py  observability_refresh.py  quotas.py  rate_limit.py  security.py
app/models/: alert_event.py  alert_rule.py  audit_log.py  docker_aggregate.py  docker_metric.py  log_entry.py  metric.py  metric_aggregate.py  server.py  user.py
app/schemas/: alert_event.py  alert_rule.py  audit.py  docker_aggregate.py  docker_metric.py  metric.py  metric_aggregate.py  server.py  token.py  user.py
app/services/: aggregation.py  alert_resolver.py  audit.py  email_alert.py  telegram.py  threshold.py
app/tasks/: aggregation_tasks.py  celery_app.py  heartbeat_tasks.py  log_retention.py  notification_tasks.py  resolve_tasks.py
app/utils/: csv_export.py
docs/: stage5-plan.md  stage6-plan.md
e2e/: conftest.py  test_login_dashboard.py  test_rules_form.py
examples/: use_sdk.py
grafana/provisioning/dashboards/: dashboards.yml  pulsewatch-business.json  pulsewatch.json
scripts/: demo.py  install-agent.sh
sdk/: README.md
static/: app.js  index.html  reset-password.html  reset-password.js  style.css
tests/: conftest.py  test_aggregates_api.py  test_aggregation.py  test_alert_events.py  test_alert_resolver.py  test_alert_rules.py  test_api_versioning.py  test_auth.py  test_csv_export.py  test_docker_metrics.py  test_email.py  test_logs_websocket.py  test_metrics.py  test_prometheus.py  test_quotas.py  test_rate_limit.py  test_servers.py  test_telegram.py  test_threshold.py  test_ws_metrics.py
