[project]
name = "pulsewatch"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "bcrypt>=5.0.0",
    "celery>=5.4.0",
    'redis>=5.0',
    "email-validator>=2.3.0",
    "docker>=7.1.0",
    "fastapi>=0.136.0",
    "httpx>=0.28.1",
    "loguru>=0.7.2",
    "psutil>=6.1.0",
    "pydantic-settings>=2.14.0",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.26",
    "sqlalchemy[asyncio]>=2.0.49",
    "uvicorn[standard]>=0.46.0",
    "websockets>=16.0",
    "slowapi>=0.1.9",
    "aiosmtplib>=5.1.0",
    "prometheus-fastapi-instrumentator>=7.0.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mypy>=1.20.2",
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "types-docker>=7.1.0.20260409",
    "types-psutil>=7.2.2.20260408",
    "types-python-jose>=3.5.0.20260408",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "W",   # pycodestyle warnings
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
]
ignore = [
    "E501",  # line length handled by ruff format
    "E712",  # SQLAlchemy ORM требует `== True/False` для построения запросов
    "UP042", # str+Enum vs StrEnum — миграция планируется отдельно (риск с SQLAlchemy enum-колонками)
]

[tool.ruff.lint.flake8-bugbear]
# FastAPI идиома: Depends/Query/Path/etc в default-аргументах — это норма
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.Query",
    "fastapi.Path",
    "fastapi.Body",
    "fastapi.Header",
    "fastapi.Cookie",
    "fastapi.Form",
    "fastapi.File",
    "fastapi.Security",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B017"]  # pytest.raises(Exception) допустим в тестах
"alembic/versions/*" = ["W291"]  # авто-сгенерированные миграции, не трогаем

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
ignore_missing_imports = true
# Не проверяем сторонний код агента и миграции — фокус на app/
exclude = [
    "alembic/versions/",
    ".venv/",
]

[[tool.mypy.overrides]]
# Тесты часто используют моки и нестрогие типы — разрешаем
module = "tests.*"
ignore_errors = true
